--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.4.2",
+    "aws-sdk": "^2.868.0",
     "axios": "^0.21.1",
     "binstring": "^0.2.1",
     "bootstrap": "^4.3.1",
