--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "dev": "nf -e .env.foreman start -p 3120",
+    "dev": "BROWSER=none nf -e .env.foreman start -p 3120",
     "dist": "build",
     "postinstall": "electron-builder install-app-deps",
     "make-mac-installer": "npm run build && electron-builder build -m",
