--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twm",
+  "name": "twmwallet",
   "description": "the world marketplace, inc safex wallet and marketplace graphical user interface",
   "version": "v1.5.0",
   "homepage": "./",
@@ -45,6 +45,7 @@
     "bootstrap": "^4.3.1",
     "child_process": "^1.0.2",
     "copy-to-clipboard": "^3.3.1",
+    "country-region-data": "^1.11.0",
     "crypto-random-string": "^3.3.0",
     "decimal.js": "^10.2.1",
     "electron-context-menu": "^0.16.0",
@@ -56,6 +57,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-country-region-selector": "^3.4.0",
     "react-dom": "^16.12.0",
     "react-file-download": "^0.3.5",
     "react-file-input": "^0.2.5",
@@ -67,6 +69,7 @@
     "react-popper": "^2.2.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
+    "react-select": "^5.2.1",
     "react-tooltip": "^3.11.6",
     "safe-buffer": "^5.2.0",
     "safex-addressjs": "git+https://github.com/safex/safex_addressjs.git",
@@ -90,7 +93,7 @@
     "make-all-installers": "npm run build && electron-builder build -ml && electron-builder build -w --x64"
   },
   "build": {
-    "appId": "com.electron.TWM",
+    "appId": "com.electron.TWMWALLET",
     "npmRebuild": true,
     "extends": null,
     "files": [
